fix: nav bar shows up on co2.html. Problem: Side bar is too big

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -1,6 +1,8 @@
 /* Navbar Style */
 .custom-navbar {
     background-color: #003399;
+    position: relative;
+    z-index: 1000;
   }
   
 /* Custom Navbar Text */
